--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
   },
   "homepage": "https://github.com/sridhar-5/Telegram-Remainder-Bot#readme",
   "dependencies": {
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "mongoose": "^6.0.13",
     "telegraf": "^4.4.2"
   }
 }
