--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "This is a telegram bot.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js",
+    "devMode": "nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -26,5 +27,8 @@
     "express": "^4.17.1",
     "mongoose": "^6.0.13",
     "telegraf": "^4.4.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.15"
   }
 }
