--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "express": "^4.17.1",
     "mongoose": "^6.0.13",
     "telegraf": "^4.4.2",
-    "telegraf-calendar-telegram": "^1.5.8"
+    "telegraf-calendar-telegram": "^1.5.8",
+    "telegram-keyboard": "^2.3.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
