--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "mongoose": "^6.0.13",
+    "nodecron": "^0.2.0",
     "telegraf": "^4.4.2",
     "telegraf-calendar-telegram": "^1.5.8",
     "telegram-keyboard": "^2.3.0"
